# meteofrance

./: .gitignore  CHANGELOG.md  LICENSE  meteofrance.cabal
app/: Cli.hs  Main.hs
src/Weather/Fr/MeteoFrance/: DPClim.hs
src/Weather/Fr/MeteoFrance/DPClim/: Api.hs  Csv.hs  Init.hs  Query.hs  Schema.hs  Types.hs  Update.hs
