cabal-version:      3.0
name:               meteofrance
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             marc
maintainer:         mlier@free.fr
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Weather.Fr.MeteoFrance.DPClim
    other-modules:
        Weather.Fr.MeteoFrance.DPClim.Types
        Weather.Fr.MeteoFrance.DPClim.Schema
        Weather.Fr.MeteoFrance.DPClim.Csv
        Weather.Fr.MeteoFrance.DPClim.Init
        Weather.Fr.MeteoFrance.DPClim.Api
        Weather.Fr.MeteoFrance.DPClim.Update
        Weather.Fr.MeteoFrance.DPClim.Query
    build-depends:
        base                 ^>=4.18.3.0,
        sqlite-simple        >=0.4,
        text                 >=2.0,
        bytestring           >=0.11,
        time                 >=1.12,
        aeson                >=2.1,
        http-conduit         >=2.3,
        http-client          >=0.7,
        http-client-tls      >=0.3,
        http-types           >=0.12,
        conduit              >=1.3,
        conduit-extra        >=1.3,
        cassava              >=0.5,
        zlib                 >=0.6,
        async                >=2.2,
        stm                  >=2.5,
        cron                 >=0.7,
        vector               >=0.13,
        unordered-containers >=0.2,
        transformers         >=0.6,
        mtl                  >=2.3
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings
        RecordWildCards
        ScopedTypeVariables
        LambdaCase

executable meteofrance
    import:           warnings
    ghc-options:      -threaded
    main-is:          Main.hs
    build-depends:
        base        ^>=4.18.3.0,
        meteofrance,
        text        >=2.0,
        cron        >=0.7
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings

executable meteofrance-cli
    import:           warnings
    ghc-options:      -threaded
    main-is:          Cli.hs
    build-depends:
        base                  ^>=4.18.3.0,
        meteofrance,
        text                  >=2.0,
        time                  >=1.12,
        bytestring            >=0.11,
        sqlite-simple         >=0.4,
        optparse-applicative  >=0.17,
        brick                 >=2.0,
        vty                   >=6.0,
        vector                >=0.13
    hs-source-dirs:   app
    default-language: Haskell2010
    default-extensions:
        OverloadedStrings

test-suite meteofrance-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.3.0,
        meteofrance
